[metadata]
name = grascii_server
version = 0.1.0
author = Chanic Panic
author_email = dev@chanicpanic.com
description = A JSON-RPC API for core Grascii functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grascii/server
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = grascii_server
python_requires = >=3.7
install_requires =
    Flask
    Flask_JSONRPC
    grascii@git+https://github.com/grascii/grascii.git@parser
    typing_extensions; python_version<"3.8"
